--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,3 +7,7 @@ hibernate.format_sql=true
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+smtp.host=smtp.example.com
+smtp.port=587
+smtp.username=behzodfarhodov31@gmail.com
+smtp.password=wlhdpdupbylmcizh
