--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,117 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/antlr4-runtime-4.13.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/activation-1.1.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/views/admin-main-menu.jsp
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/angus-activation-2.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/app.properties
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/config/AppInitializer.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/BaseEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/BaseRepo.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/BaseService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/byte-buddy-1.14.15.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/CartEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/CartEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/CartItemEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/CartItemEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/checker-qual-3.42.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/classmate-1.5.1.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/CommentEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/repository/CommentRepo.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/service/CommentService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/commons-fileupload-1.4.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/commons-fileupload-1.4.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/commons-io-2.11.0.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/commons-io-2.11.0.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/views/create-product.jsp
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/FileService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/hibernate-commons-annotations-6.0.6.Final.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/hibernate-core-6.5.1.Final.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/config/HibernateConfig.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/controller/HomeController.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/exception/InvalidInputException.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/istack-commons-runtime-4.1.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.activation-api-2.1.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.annotation-api-2.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.el-api-5.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.inject-api-2.0.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.persistence-api-3.1.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.servlet.jsp.jstl-3.0.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.servlet.jsp.jstl-api-3.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.servlet-api-6.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.transaction-api-2.0.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jakarta.xml.bind-api-4.0.0.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jandex-3.1.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/javax.mail-1.6.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jaxb-core-4.0.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jaxb-runtime-4.0.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jboss-logging-3.5.0.Final.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/jstl-1.2.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/jstl-1.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/logback-classic-1.2.6.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/logback-classic-1.2.6.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/logback-core-1.2.6.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/logback-core-1.2.6.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/lombok-1.18.34.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/Main.class
+/out/artifacts/RestoranReservation_war_exploded/META-INF/MANIFEST.MF
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/micrometer-commons-1.12.7.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/micrometer-observation-1.12.7.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/config/MvcConfigurer.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/MyFile.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/OrderEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/OrderEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/OrderRepo.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/repository/OrderRepo.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/OrderService.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/service/OrderService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/postgresql-42.7.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/controller/ProductController.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/controller/ProductController.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/ProductEntity$ProductEntityBuilder.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/ProductEntity$ProductEntityBuilder.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/ProductEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/ProductEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/ProductRepository.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/repository/ProductRepository.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/views/products.jsp
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/ProductService.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/service/ProductService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/ReservationEntity.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/entity/ReservationEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/ReservationRepo.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/repository/ReservationRepo.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/ReservationService.class
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/classes/org/example/service/ReservationService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/controller/RestaurantController.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/RestaurantEntity$RestaurantEntityBuilder.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/RestaurantEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/RestaurantRepo.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/RestaurantService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/enumertaror/RestaurantType.class
+/.idea/artifacts/RestoranReservation_Web_exploded.xml
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/slf4j-api-1.7.32.jar
+/out/artifacts/RestoranReservation_Web_exploded/WEB-INF/lib/slf4j-api-1.7.32.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/slf4j-api-2.0.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-aop-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-beans-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-context-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-core-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-data-commons-3.3.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-data-jpa-3.3.1.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-expression-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-jcl-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-jdbc-6.1.9.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-orm-6.1.9.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-tx-6.1.9.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-web-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/spring-webmvc-6.1.10.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/lib/txw2-4.0.2.jar
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/controller/UserController.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/entity/UserEntity.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/repository/UserRepo.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/enumertaror/UserRole.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/UserService.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/VerificationService$1.class
+/out/artifacts/RestoranReservation_war_exploded/WEB-INF/classes/org/example/service/VerificationService.class
