--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,18 @@
             <version>1.4</version>
         </dependency>
 
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
